--- a/MorseCode.UI/app.config
+++ b/MorseCode.UI/app.config
@@ -9,10 +9,10 @@
     <userSettings>
         <MorseCode.UI.Properties.Settings>
             <setting name="Dot" serializeAs="String">
-                <value>.</value>
+                <value>d</value>
             </setting>
             <setting name="Dash" serializeAs="String">
-                <value>-</value>
+                <value>D</value>
             </setting>
             <setting name="CharSpace" serializeAs="String">
                 <value />
@@ -24,7 +24,7 @@
                 <value>500</value>
             </setting>
             <setting name="SpaceSense" serializeAs="String">
-                <value>500</value>
+                <value>600</value>
             </setting>
             <setting name="IsMuted" serializeAs="String">
                 <value>False</value>
